# CalenDumper-Backend

./: .env.sample  .gitignore  README.md  app.py  models.py  pyproject.toml
services/: calendar.py  gemini.py  googleoauth.py  model_setting.py  seeder.py
